--- a/gallery.html
+++ b/gallery.html
@@ -293,194 +293,181 @@
 
 
     <!-- Videos Carousel -->
-    <section class="container my-5">
-      <h3 class="text-center mb-4">Project Videos</h3>
+<section class="container my-5">
+  <h3 class="text-center mb-4">Project Videos</h3>
 
-      <!-- Alert to let users know they need to click -->
-      <div id="videoAlert" class="alert alert-info text-center" role="alert">
-        📽️ Click Or Tap On A Video Below To Start Playing It!
-      </div>
-
-      <div id="videoCarousel" class="carousel slide" data-bs-ride="carousel">
-        <!-- Indicators -->
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="0" class="active"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="1"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="2"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="3"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="4"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="5"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="6"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="7"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="8"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="9"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="10"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="11"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="12"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="13"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="14"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="15"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="16"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="17"></button>
-          <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="18"></button>
-        </div>
-
-        <!-- Slides -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy1mp4.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy18mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy12mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy13mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy14mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy15mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy16mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls muted>
-              <source src="photos/apoxy17mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy19mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy20mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls muted>
-              <source src="photos/apoxy21mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy22mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy24mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy25mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy27mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy30mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy41mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy42mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <div class="carousel-item">
-            <video class="d-block w-100" controls autoplay muted playsinline>
-              <source src="photos/apoxy44mp4.mp4" type="video/mp4">
-            </video>
-          </div>
-        </div>
-
-        <!-- Controls -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#videoCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#videoCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </button>
-      </div>
-    </section>
-
-    <!-- Fade-out script for alert -->
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        setTimeout(() => {
-          const alertBox = document.getElementById("videoAlert");
-          if (alertBox) {
-            alertBox.style.transition = "opacity 0.8s ease";
-            alertBox.style.opacity = "0";
-            setTimeout(() => alertBox.remove(), 800);
-          }
-        }, 5000); // 5 seconds
-      });
-    </script>
-
-
-
-  </main>
-
-  <!-- Modal -->
-  <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div class="modal-content bg-transparent border-0">
-        <div class="modal-body text-center p-0">
-          <img src="" id="modalImage" alt="Expanded view" class="img-fluid">
-        </div>
-      </div>
-    </div>
+  <!-- Alert to let users know they need to click -->
+  <div id="videoAlert" class="alert alert-info text-center" role="alert">
+    📽️ Click Or Tap On A Video Below To Start Playing It!
   </div>
+
+  <div id="videoCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!-- Indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="2"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="3"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="4"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="5"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="6"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="7"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="8"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="9"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="10"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="11"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="12"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="13"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="14"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="15"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="16"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="17"></button>
+      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="18"></button>
+    </div>
+
+    <!-- Slides -->
+    <div class="carousel-inner">
+
+      <div class="carousel-item active">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1UIl4yAa3PNYQUdhNNUyyfsU0MBu_MDcy" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=11qag5QN1CnNwq_0nMQ6OQt2V02WRwozk" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1lZJHEq62P0kwkuPkUWgCItPfWpA74UX0" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1VcO3b3ckHg9MYCJmlxEB1P7yHsIjEK7J" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1QoTEK93qE2MgA5H06IUaQXU3Lr1Z0IBq" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1NZm1zDWMfAL_MxmCTEVX-6BRzuuahLm3" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1Nk4B3cwCYwShH-dyiKKZojUhiT4UMOvr" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls muted>
+          <source src="https://drive.google.com/uc?export=download&id=1ZRyde04m3h-6UW9EUvaS6r_o9Q5NvHlS" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1plV1UV9zREV2IBQ0u_ivHNTfvBjkdct3" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1knaBBywaSvKOz4vZN6zKZgeBoOazM69w" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls muted>
+          <source src="https://drive.google.com/uc?export=download&id=1WyaM1Fm_CUc1g7BEyWIKQr_w01XSiAqx" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1ooBjS1Xzeusp2AC5kQrM1NbKex50OZHr" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1fn6e62iwpqchFIx6eLPs0DwZSbq0Zbz3" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1q-RtRx7HHIDf8DfAE7x9_huqVUGBW39z" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1SuZUw3TSg4Te3I5OELaS3Q5GXf53z8ey" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1rPzsJVH6UQxNLU4CwzP1GWL86-SBqTS6" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=16h5m01SEnxGsYOGuTnZRD00icIJXkKYw" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=14UrstPJe43WZV8l-jeQxzNMSZU1Z8nnD" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="carousel-item">
+        <video class="d-block w-100" controls autoplay muted playsinline>
+          <source src="https://drive.google.com/uc?export=download&id=1rM6vZoNEPxoGmoaoxG0T-42c4g2pSzK0" type="video/mp4">
+        </video>
+      </div>
+
+    </div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#videoCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#videoCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
+
+<!-- Fade-out script for alert -->
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    setTimeout(() => {
+      const alertBox = document.getElementById("videoAlert");
+      if (alertBox) {
+        alertBox.style.transition = "opacity 0.8s ease";
+        alertBox.style.opacity = "0";
+        setTimeout(() => alertBox.remove(), 800);
+      }
+    }, 5000);
+  });
+</script>
+
 
   <!-- Footer -->
   <footer class="text-center mt-5">
