Final website ready for deployment

--- a/gallery.html
+++ b/gallery.html
@@ -292,169 +292,60 @@
     </section>
 
 
-    <!-- Videos Carousel -->
-<section class="container my-5">
+    <section class="container my-5">
   <h3 class="text-center mb-4">Project Videos</h3>
 
-  <!-- Alert to let users know they need to click -->
-  <div id="videoAlert" class="alert alert-info text-center" role="alert">
+  <!-- Alert -->
+  <div id="videoAlert" class="alert alert-info text-center mx-auto w-75" role="alert">
     📽️ Click Or Tap On A Video Below To Start Playing It!
   </div>
 
-  <div id="videoCarousel" class="carousel slide" data-bs-ride="carousel">
-    <!-- Indicators -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="2"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="3"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="4"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="5"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="6"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="7"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="8"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="9"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="10"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="11"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="12"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="13"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="14"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="15"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="16"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="17"></button>
-      <button type="button" data-bs-target="#videoCarousel" data-bs-slide-to="18"></button>
+  <!-- Stacked Videos -->
+  <div class="d-flex flex-column gap-4">
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/t6no6SdnZ6Q" title="apoxy1mp4.mp4" allowfullscreen></iframe>
     </div>
 
-    <!-- Slides -->
-    <div class="carousel-inner">
-
-      <div class="carousel-item active">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1UIl4yAa3PNYQUdhNNUyyfsU0MBu_MDcy" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=11qag5QN1CnNwq_0nMQ6OQt2V02WRwozk" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1lZJHEq62P0kwkuPkUWgCItPfWpA74UX0" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1VcO3b3ckHg9MYCJmlxEB1P7yHsIjEK7J" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1QoTEK93qE2MgA5H06IUaQXU3Lr1Z0IBq" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1NZm1zDWMfAL_MxmCTEVX-6BRzuuahLm3" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1Nk4B3cwCYwShH-dyiKKZojUhiT4UMOvr" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls muted>
-          <source src="https://drive.google.com/uc?export=download&id=1ZRyde04m3h-6UW9EUvaS6r_o9Q5NvHlS" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1plV1UV9zREV2IBQ0u_ivHNTfvBjkdct3" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1knaBBywaSvKOz4vZN6zKZgeBoOazM69w" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls muted>
-          <source src="https://drive.google.com/uc?export=download&id=1WyaM1Fm_CUc1g7BEyWIKQr_w01XSiAqx" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1ooBjS1Xzeusp2AC5kQrM1NbKex50OZHr" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1fn6e62iwpqchFIx6eLPs0DwZSbq0Zbz3" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1q-RtRx7HHIDf8DfAE7x9_huqVUGBW39z" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1SuZUw3TSg4Te3I5OELaS3Q5GXf53z8ey" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1rPzsJVH6UQxNLU4CwzP1GWL86-SBqTS6" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=16h5m01SEnxGsYOGuTnZRD00icIJXkKYw" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=14UrstPJe43WZV8l-jeQxzNMSZU1Z8nnD" type="video/mp4">
-        </video>
-      </div>
-
-      <div class="carousel-item">
-        <video class="d-block w-100" controls autoplay muted playsinline>
-          <source src="https://drive.google.com/uc?export=download&id=1rM6vZoNEPxoGmoaoxG0T-42c4g2pSzK0" type="video/mp4">
-        </video>
-      </div>
-
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/0RPhlyYIuhQ" title="apoxy3mp4.mp4" allowfullscreen></iframe>
     </div>
 
-    <!-- Controls -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#videoCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#videoCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/YZVS5K02kT0" title="apoxy12mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/zkYtE19In9U" title="apoxy13mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/02EhR3lD70M" title="apoxy14mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/VEgMNtYQ35o" title="apoxy15mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/ZnMAXLhdCSA" title="apoxy16mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/baoC0a9O2-Y" title="apoxy17mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/4DHQ50OMreU" title="apoxy18mp4.mp4" allowfullscreen></iframe>
+    </div>
+
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/yAe-1ee78eQ" title="apoxy19mp4.mp4" allowfullscreen></iframe>
+    </div>
+
   </div>
 </section>
 
-<!-- Fade-out script for alert -->
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     setTimeout(() => {
@@ -469,51 +360,52 @@
 </script>
 
 
-  <!-- Footer -->
-  <footer class="text-center mt-5">
-    <div class="mb-4 footer-locations">
-      <h5 class="fw-bold mb-3">Proudly Serving Arizona</h5>
-      <p>
-        <i class="fas fa-map-pin"></i> Scottsdale
-        &nbsp; <i class="fas fa-map-pin"></i> Mesa
-        &nbsp; <i class="fas fa-map-pin"></i> Phoenix
-        &nbsp; <i class="fas fa-map-pin"></i> Chandler
-        &nbsp; <i class="fas fa-map-pin"></i> Gilbert
-        &nbsp; <i class="fas fa-map-pin"></i> Tempe
-        &nbsp; <i class="fas fa-map-pin"></i> Paradise Valley
-        &nbsp; <i class="fas fa-map-pin"></i> Queen Creek
-        &nbsp; <i class="fas fa-map-pin"></i> San Tan Valley
-        &nbsp; <i class="fas fa-map-pin"></i> Surprise
-        &nbsp; <i class="fas fa-map-pin"></i> Tolleson
-        &nbsp; <i class="fas fa-map-pin"></i> Avondale
-        &nbsp; <i class="fas fa-map-pin"></i> Desert Ridge
-        &nbsp; <i class="fas fa-map-pin"></i> Fountain Hills
-        &nbsp; <i class="fas fa-map-pin"></i> Glendale
-        &nbsp; <i class="fas fa-map-pin"></i> Maricopa
-      </p>
-    </div>
-    <p class="mb-2">&copy; 2025 Beyond Floor Solutions. All Rights Reserved.</p>
-    <div>
-      <a href="https://www.facebook.com/BeyondFloorSolutions" target="_blank" rel="noopener noreferrer"
-        class="text-dark me-3 social-icon">
-        <i class="fab fa-facebook fa-lg"></i>
-      </a>
-      <a href="https://www.instagram.com/beyondfloorsolutionsllc/" target="_blank" rel="noopener noreferrer"
-        class="text-dark me-3 social-icon">
-        <i class="fab fa-instagram fa-lg"></i>
-      </a>
-    </div>
-  </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    const imageModal = document.getElementById('imageModal');
-    const modalImage = document.getElementById('modalImage');
-    imageModal.addEventListener('show.bs.modal', function (event) {
-      const img = event.relatedTarget;
-      modalImage.src = img.getAttribute('data-bs-image');
-    });
-  </script>
+    <!-- Footer -->
+    <footer class="text-center mt-5">
+      <div class="mb-4 footer-locations">
+        <h5 class="fw-bold mb-3">Proudly Serving Arizona</h5>
+        <p>
+          <i class="fas fa-map-pin"></i> Scottsdale
+          &nbsp; <i class="fas fa-map-pin"></i> Mesa
+          &nbsp; <i class="fas fa-map-pin"></i> Phoenix
+          &nbsp; <i class="fas fa-map-pin"></i> Chandler
+          &nbsp; <i class="fas fa-map-pin"></i> Gilbert
+          &nbsp; <i class="fas fa-map-pin"></i> Tempe
+          &nbsp; <i class="fas fa-map-pin"></i> Paradise Valley
+          &nbsp; <i class="fas fa-map-pin"></i> Queen Creek
+          &nbsp; <i class="fas fa-map-pin"></i> San Tan Valley
+          &nbsp; <i class="fas fa-map-pin"></i> Surprise
+          &nbsp; <i class="fas fa-map-pin"></i> Tolleson
+          &nbsp; <i class="fas fa-map-pin"></i> Avondale
+          &nbsp; <i class="fas fa-map-pin"></i> Desert Ridge
+          &nbsp; <i class="fas fa-map-pin"></i> Fountain Hills
+          &nbsp; <i class="fas fa-map-pin"></i> Glendale
+          &nbsp; <i class="fas fa-map-pin"></i> Maricopa
+        </p>
+      </div>
+      <p class="mb-2">&copy; 2025 Beyond Floor Solutions. All Rights Reserved.</p>
+      <div>
+        <a href="https://www.facebook.com/BeyondFloorSolutions" target="_blank" rel="noopener noreferrer"
+          class="text-dark me-3 social-icon">
+          <i class="fab fa-facebook fa-lg"></i>
+        </a>
+        <a href="https://www.instagram.com/beyondfloorsolutionsllc/" target="_blank" rel="noopener noreferrer"
+          class="text-dark me-3 social-icon">
+          <i class="fab fa-instagram fa-lg"></i>
+        </a>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      const imageModal = document.getElementById('imageModal');
+      const modalImage = document.getElementById('modalImage');
+      imageModal.addEventListener('show.bs.modal', function (event) {
+        const img = event.relatedTarget;
+        modalImage.src = img.getAttribute('data-bs-image');
+      });
+    </script>
 </body>
 
 </html>
