--- a/index.html
+++ b/index.html
@@ -222,21 +222,18 @@
       </div>
     </header>
 
-    <!-- Video Section -->
+    <!-- Image Section -->
     <section class="position-relative">
-      <video autoplay loop muted playsinline class="w-100" style="max-height: 500px; object-fit: cover;">
-        <div class="ratio ratio-16x9">
-          <iframe src="https://youtu.be/TThbYMROBck" title="apoxy50mp4.mp4" allowfullscreen></iframe>
-        </div>
-        Your browser does not support the video tag.
-      </video>
+      <img src="photos/apoxy49.jpeg" alt="Beyond Floor Solutions" class="w-100"
+        style="max-height: 500px; object-fit: cover;">
 
-      <!-- Optional overlay text (remove if not needed) -->
+      <!-- Overlay Text -->
       <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
         <h2 class="fw-bold display-5">High-Performance Flooring Solutions</h2>
         <p>Durability. Design. Dependability.</p>
       </div>
     </section>
+
 
     <!-- Services Preview -->
     <section class="container my-5">
